--- a/hi.html
+++ b/hi.html
@@ -2,7 +2,7 @@
 <head>
 <body>
 <h1>IST STUDENTS</h1>
-<i><u>nakul<br>azam</u></i>
+<i><u>nakul<br>azam<br>ehtesham</u></i>
 </body>
 </head>
 </html>
